--- a/shose website/HTML/index.html
+++ b/shose website/HTML/index.html
@@ -30,8 +30,8 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
 
     <!-- Custom css link  -->
-    <link rel="stylesheet" href="../HTML/CSS/index.css" />
-    <link rel="stylesheet" href="../HTML/CSS/media.css" />
+    <link rel="stylesheet" href="./CSS/index.css" />
+    <link rel="stylesheet" href="./CSS/media.css" />
   </head>
   <body>
     <!-- fist header Free express shipping with orders over $200  -->
