--- a/protfolio 2/index.html
+++ b/protfolio 2/index.html
@@ -599,7 +599,7 @@
 
     <header>
         <nav>
-            <div class="logo">DARSHAN.DEV</div>
+            <div class="logo">DARSHAN</div>
             <ul class="nav-links">
                 <li><a href="#about">About</a></li>
                 <li><a href="#projects">Projects</a></li>
@@ -690,22 +690,23 @@
 </div>
 
 
-                <div class="project-card fade-in">
-                    <div class="project-header">📱</div>
-                    <div class="project-content">
-                        <h3>Project B</h3>
-                        <p>Yeh dusra project placeholder hai, tum isme link aur description daal sakte ho.</p>
-                        <div class="tech-stack">
-                            <span class="tech-tag">React</span>
-                            <span class="tech-tag">Tailwind</span>
-                            <span class="tech-tag">Node.js</span>
-                        </div>
-                        <div class="project-links">
-                            <a href="#" class="project-link demo">Live Demo</a>
-                            <a href="#" class="project-link code">View Code</a>
-                        </div>
-                    </div>
-                </div>
+            <div class="project-card fade-in">
+    <div class="project-header">📱</div>
+    <div class="project-content">
+        <h3>Amazon Clone Web Page</h3>
+        <p>This project is a front-end clone of the Amazon home page, created using HTML, CSS, and JavaScript. It mimics the layout and responsiveness of the actual site for practice and UI replication.</p>
+        <div class="tech-stack">
+            <span class="tech-tag">HTML</span>
+            <span class="tech-tag">CSS</span>
+            <span class="tech-tag">JavaScript</span>
+        </div>
+        <div class="project-links">
+            <a href="https://javscript2-446d.vercel.app/" class="project-link demo" target="_blank">Live Demo</a>
+            <a href="https://github.com/DARSHANRAVAL8600/javscript2/tree/master/amazon%20web%20page" class="project-link code" target="_blank">View Code</a>
+        </div>
+    </div>
+</div>
+
 
                 <!-- Aur projects yahan add karo -->
             </div>
