--- a/protfolio 2/index.html
+++ b/protfolio 2/index.html
@@ -600,11 +600,13 @@
     <header>
         <nav>
             <div class="logo">DARSHAN</div>
-            <ul class="nav-links">
-                <li><a href="#about">About</a></li>
-                <li><a href="#projects">Projects</a></li>
-                <li><a href="#contact">Contact</a></li>
-            </ul>
+      <ul class="nav-links">
+    <li><a href="#about">About</a></li>
+    <li><a href="#projects">Projects</a></li>
+    <li><a href="#contact">Contact</a></li>
+    <li><a href="https://drive.google.com/file/d/1TULiTQagzBW8ELRs4QmWxvwe76ZQmGGW/view?usp=drive_link
+" target="_blank" download>Download CV</a></li>
+</ul>
         </nav>
     </header>
 
